--- a/index.css
+++ b/index.css
@@ -1,12 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-    --main-color: rgb(35, 228, 99);
+    --primary-color: rgb(0, 75, 255);
+    --secondary-color: rgb(0, 65, 218);
+    --text-color: white;
+
+    --lazy-spring: linear(
+        0,
+        0.008 1.1%,
+        0.031 2.2%,
+        0.129 4.8%,
+        0.257 7.2%,
+        0.671 14.2%,
+        0.789 16.5%,
+        0.881 18.6%,
+        0.957 20.7%,
+        1.019 22.9%,
+        1.063 25.1%,
+        1.094 27.4%,
+        1.114 30.7%,
+        1.112 34.5%,
+        1.018 49.9%,
+        0.99 59.1%,
+        1
+    );
+    --energetic-wiggle: linear(
+        0,
+        0.76 4.4%,
+        0.928 6.2%,
+        0.984 8%,
+        0.92 9.9%,
+        0.731 11.9%,
+        -0.506 20.3%,
+        -0.667 22.2%,
+        -0.731 24%,
+        -0.731 24.8%,
+        -0.712 25.7%,
+        -0.615 27.5%,
+        0.252 35.9%,
+        0.4 38.1%,
+        0.463 40.3%,
+        0.455 41.9%,
+        0.399 43.7%,
+        -0.106 51.9%,
+        -0.195 54.1%,
+        -0.235 56.3%,
+        -0.235 57.9%,
+        -0.209 59.7%,
+        0.019 67.5%,
+        0.061 69.6%,
+        0.082 71.7%,
+        0.085 73.3%,
+        0.077 75.1%,
+        0.011 81.9%,
+        -0.009 85.5%,
+        0
+    );
+    --lazy-2-spring: linear(
+        0,
+        0.002 0.5%,
+        0.007 1%,
+        0.016 1.5%,
+        0.031 2.1%,
+        0.05 2.7%,
+        0.073 3.3%,
+        0.132 4.6%,
+        0.191 5.7%,
+        0.262 6.9%,
+        0.555 11.5%,
+        0.676 13.5%,
+        0.795 15.7%,
+        0.844 16.7%,
+        0.888 17.7%,
+        0.928 18.7%,
+        0.964 19.7%,
+        0.996 20.7%,
+        1.026 21.8%,
+        1.049 22.8%,
+        1.071 23.9%,
+        1.088 25%,
+        1.102 26.2%,
+        1.113 27.7%,
+        1.119 29.2%,
+        1.12 30.9%,
+        1.115 32.7%,
+        1.108 34.2%,
+        1.098 35.9%,
+        1.042 43.3%,
+        1.017 47.2%,
+        1.007 49.3%,
+        0.999 51.5%,
+        0.993 53.7%,
+        0.988 56%,
+        0.986 59.2%,
+        0.986 62.9%,
+        0.997 76.6%,
+        1.001 83.7%,
+        1
+    );
 }
 
 * {
     font-family: Montserrat;
     user-select: none;
+    color: var(--text-color);
 }
 
 html,
@@ -14,13 +111,99 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     overflow: hidden;
     width: 100%;
     height: 100%;
-    background-color: rgb(22, 22, 29);
+    background-color: rgb(18, 18, 18);
 }
 
-h1 {
-    color: var(--main-color);
+#dark,
+#light {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+#light {
+    background-color: white;
+}
+
+button.modern {
+    overflow: hidden;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 5px;
+    position: relative;
+    background-color: var(--primary-color);
+    border: none;
+    cursor: pointer;
+    box-shadow: 0 3px 0 var(--secondary-color);
+    transition: 500ms;
+    transition-timing-function: var(--lazy-spring);
+}
+
+button.modern:hover {
+    scale: 1.05;
+}
+button.modern:active {
+    scale: 0.95;
+}
+
+.ripple {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    transform: scale(0);
+    animation: ripple-effect 500ms linear;
+    pointer-events: none;
+}
+
+@keyframes ripple-effect {
+    to {
+        transform: scale(25);
+        opacity: 0;
+    }
+}
+
+.cartoon {
+    border: 5px solid black;
+    box-shadow: 5px 5px black;
+}
+
+div.cartoon {
+    background-color: white;
+    width: 400px;
+    height: 100px;
+    transition: 750ms;
+    transition-timing-function: var(--lazy-2-spring);
+    margin-bottom: 15px;
+}
+
+div.cartoon.active {
+    height: 600px;
+}
+
+button.cartoon {
+    background-color: #ff69b4;
+    color: black;
+    font-size: 20px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: 350ms;
+    transition-timing-function: var(--lazy-2-spring);
+    padding: 10px 40px;
+}
+button.cartoon:hover {
+    transform: translate(-4px, -4px);
+    box-shadow: 13px 13px black;
+}
+button.cartoon:active {
+    transform: translate(0, 0);
+    box-shadow: 3px 3px;
 }
